--- a/Server/templates/index.html
+++ b/Server/templates/index.html
@@ -5,7 +5,7 @@
 	<title> Highscore - tabell </title>
 	<meta charset="utf-8"/>
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900' rel='stylesheet' type='text/css'>
- 	<link rel="stylesheet" type="text/css" href="styleset.css">
+ 	<link rel="stylesheet" type="text/css" href="static/styleset.css">
 </head>
 
 <body>
