Established links and html-paths to level2.html, level3.html, level4.html

--- a/Server/templates/Level2.html
+++ b/Server/templates/Level2.html
@@ -18,10 +18,10 @@
 
 
 	<div class="menu">
-		<div class="menu_items"><a href="index.html"> LEVEL 1 </a></div>
-		<div class="menu_items"><a href="#"> LEVEL 2</a></div>
-		<div class="menu_items"><a href="Level3.html"> LEVEL 3</a></div>
-		<div class="menu_items"><a href="Level4.html"> LEVEL 4</a></div>
+		<div class="menu_items"><a href="http://127.0.0.1:5000/"> LEVEL 1 </a></div>
+		<div class="menu_items"><a href="http://127.0.0.1:5000/#"> LEVEL 2</a></div>
+		<div class="menu_items"><a href="http://127.0.0.1:5000/Level3"> LEVEL 3</a></div>
+		<div class="menu_items"><a href="http://127.0.0.1:5000/Level4"> LEVEL 4</a></div>
 	</div>
 
 	<p> <i> "Good, better, best. Never let it rest. <br />'Til your good is better
