--- a/Server/templates/Level3.html
+++ b/Server/templates/Level3.html
@@ -18,10 +18,10 @@
 
 
 	<div class="menu">
-		<div class="menu_items"><a href="index.html"> LEVEL 1 </a></div>
-		<div class="menu_items"><a href="Level2.html"> LEVEL 2</a></div>
-		<div class="menu_items"><a href="#"> LEVEL 3</a></div>
-		<div class="menu_items"><a href="Level4.html"> LEVEL 4</a></div>
+		<div class="menu_items"><a href="http://127.0.0.1:5000/"> LEVEL 1 </a></div>
+		<div class="menu_items"><a href="http://127.0.0.1:5000/Level2"> LEVEL 2</a></div>
+		<div class="menu_items"><a href="http://127.0.0.1:5000/#"> LEVEL 3</a></div>
+		<div class="menu_items"><a href="http://127.0.0.1:5000/Level4"> LEVEL 4</a></div>
 	</div>
 
 	<p><i>"You might not think that programmers are artists, <br /> but programming is an extremely creative profession. <br /> It's logic-based creativity."
