--- a/Server/templates/Level4.html
+++ b/Server/templates/Level4.html
@@ -18,10 +18,10 @@
 
 
 	<div class="menu">
-		<div class="menu_items"><a href="index.html"> LEVEL 1 </a></div>
-		<div class="menu_items"><a href="Level2.html"> LEVEL 2</a></div>
-		<div class="menu_items"><a href="Level3.html"> LEVEL 3</a></div>
-		<div class="menu_items"><a href="#"> LEVEL 4</a></div>
+		<div class="menu_items"><a href="http://127.0.0.1:5000/"> LEVEL 1 </a></div>
+		<div class="menu_items"><a href="http://127.0.0.1:5000/Level2"> LEVEL 2</a></div>
+		<div class="menu_items"><a href="http://127.0.0.1:5000/Level3"> LEVEL 3</a></div>
+		<div class="menu_items"><a href="http://127.0.0.1:5000/#"> LEVEL 4</a></div>
 	</div>
 
 	<p>
