--- a/Server/templates/data.html
+++ b/Server/templates/data.html
@@ -1,5 +1,6 @@
-<h1> {{game}}</h1>
-<h2> {{level}}</h2>
-<p> {{score}}</p>
-<p> {{player}}</p>
-<p> {{timestamp}}</p>
+<h1> {{game}}         - game</h1>
+<h2> {{level}}       - level</h2>
+<p> {{pointss}}     - points</p>
+<p> {{user}}      - username</p>
+<p> {{timestamp}}   time and date submitted</p>
+<p> {{clockdiff}} seconds</p>
