Reset all highscores... woops! - removed more bugs in storage.py files.. - Played around some more in flask.py - Trimmed server-side DataGuy-class down to the bare essentials.

--- a/Server/templates/data.html
+++ b/Server/templates/data.html
@@ -1,6 +1,6 @@
 <h1> {{game}}         - game</h1>
 <h2> {{level}}       - level</h2>
-<p> {{pointss}}     - points</p>
+<p> {{points}}     - points</p>
 <p> {{user}}      - username</p>
 <p> {{timestamp}}   time and date submitted</p>
 <p> {{clockdiff}} seconds</p>
